syntax = "proto3";
option go_package = ".;proto";

service User{
  rpc GetUserList (PageInfo) returns (UserListResponse);//用户列表
  rpc GetUserByMobile (MobileRequest) returns (UserInfoResponse);//通过mobile查询用户信息
  rpc GetUserById (IdRequest) returns (UserInfoResponse);//通过id查询用户信息
  rpc CreateUser (CreateUserInfo) returns (UserInfoResponse);//创建用户
  rpc UpdateUser (UpdateUserInfo) returns (MyEmpty);//更新用户
  rpc CheckPassword (PasswordCheckInfo) returns (CheckResponse);//检查密码
}

message MyEmpty {
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthday = 5;
  string gender = 6;
  uint32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nickName = 1;
  string mobile = 2;
  string password = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  uint64 birthday = 3;
  string gender = 4;
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}
